--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "FlowState2",
+            "request": "launch",
+            "mainClass": "lesson2.operators.exec.FlowState2",
+            "projectName": "Day1_69de353e"
+        },
+        {
+            "type": "java",
             "name": "SwitchCase",
             "request": "launch",
             "mainClass": "lesson2.operators.exec.SwitchCase",
